<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_area_of_interest_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:textSize="@dimen/dimen_30_sp"
            android:text="@string/area_of_interest"
            android:textStyle="bold"
            android:fontFamily="casual"/>

        <CheckedTextView
            android:id="@+id/cb_android_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20_dp"
            android:layout_marginTop="@dimen/dimen_10_dp"
            android:text="@string/android"
            android:fontFamily="casual"
            android:textSize="@dimen/dimen_20_sp"
            android:checkMarkTint="@color/colorPrimary"
            android:checked="false"/>

        <CheckedTextView
            android:id="@+id/cb_coding_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20_dp"
            android:layout_marginTop="@dimen/dimen_10_dp"
            android:text="@string/coding"
            android:fontFamily="casual"
            android:textSize="@dimen/dimen_20_sp"
            android:checkMarkTint="@color/colorPrimary"
            android:checked="false"/>

        <CheckedTextView
            android:id="@+id/cb_algos_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20_dp"
            android:layout_marginTop="@dimen/dimen_10_dp"
            android:text="@string/algos"
            android:fontFamily="casual"
            android:textSize="@dimen/dimen_20_sp"
            android:checkMarkTint="@color/colorPrimary"
            android:checked="false"/>
        <CheckedTextView
            android:id="@+id/cb_ds_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20_dp"
            android:layout_marginTop="@dimen/dimen_10_dp"
            android:text="@string/ds"
            android:fontFamily="casual"
            android:textSize="@dimen/dimen_20_sp"
            android:checkMarkTint="@color/colorPrimary"
            android:checked="false"/>
        <CheckedTextView
            android:id="@+id/cb_java_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20_dp"
            android:layout_marginTop="@dimen/dimen_10_dp"
            android:text="@string/java"
            android:fontFamily="casual"
            android:textSize="@dimen/dimen_20_sp"
            android:checkMarkTint="@color/colorPrimary"
            android:checked="false"/>
        <CheckedTextView
            android:id="@+id/cb_backend_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20_dp"
            android:layout_marginTop="@dimen/dimen_10_dp"
            android:text="@string/backend"
            android:fontFamily="casual"
            android:textSize="@dimen/dimen_20_sp"
            android:checkMarkTint="@color/colorPrimary"
            android:checked="false"/>
        <CheckedTextView
            android:id="@+id/cb_problem_solving_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20_dp"
            android:layout_marginTop="@dimen/dimen_10_dp"
            android:text="@string/problem_solving"
            android:fontFamily="casual"
            android:textSize="@dimen/dimen_20_sp"
            android:checkMarkTint="@color/colorPrimary"
            android:checked="false"/>

        <Button
            android:id="@+id/btn_area_of_interest_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:text="@string/submit"
            android:textSize="@dimen/dimen_20_sp"
            android:fontFamily="casual"/>

    </LinearLayout>

</ScrollView>