<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_firstname_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:fontFamily="casual"
        android:text="@string/firstname_heading"
        android:textSize="@dimen/dimen_16_sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_firstname_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40_dp"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginEnd="@dimen/dimen_40_dp" />

    <TextView
        android:id="@+id/tv_secondname_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:fontFamily="casual"
        android:text="@string/secondname_heading"
        android:textSize="@dimen/dimen_16_sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_secondname_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40_dp"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginEnd="@dimen/dimen_40_dp" />

    <TextView
        android:id="@+id/tv_username_reg_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:fontFamily="casual"
        android:text="@string/username_heading"
        android:textSize="@dimen/dimen_16_sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_username_reg_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40_dp"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginEnd="@dimen/dimen_40_dp" />

    <TextView
        android:id="@+id/tv_password_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:fontFamily="casual"
        android:text="@string/password_heading"
        android:textSize="@dimen/dimen_16_sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_password_reg_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40_dp"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:inputType="textPassword"
        android:layout_marginEnd="@dimen/dimen_40_dp" />

    <TextView
        android:id="@+id/tv_confirm_password_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:fontFamily="casual"
        android:text="@string/confirm_password_heading"
        android:textSize="@dimen/dimen_16_sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_confirm_password_reg_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40_dp"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:inputType="textPassword"
        android:layout_marginEnd="@dimen/dimen_40_dp" />




    <Button
        android:id="@+id/btn_signup_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:fontFamily="casual"
        android:text="@string/next"
        android:textStyle="bold" />
</LinearLayout>