<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:id="@+id/tv_username_heading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_20_dp"
    android:layout_marginStart="@dimen/dimen_20_dp"
    android:text="@string/username_heading"
    android:textSize="@dimen/dimen_16_sp"
    android:fontFamily="casual"
    android:textStyle="bold"/>

    <EditText
        android:id="@+id/edt_username_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40_dp"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginEnd="@dimen/dimen_40_dp" />

    <TextView
        android:id="@+id/tv_password_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:text="@string/password_heading"
        android:textSize="@dimen/dimen_16_sp"
        android:fontFamily="casual"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edt_password_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40_dp"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginEnd="@dimen/dimen_40_dp" />

    <Button
        android:id="@+id/btn_login_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textStyle="bold"
        android:fontFamily="casual"/>

</LinearLayout>