<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_login_welcome_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginEnd="@dimen/dimen_20_dp"
        android:text="@string/welcome_text"
        android:textSize="@dimen/dimen_30_sp"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/dimen_40_dp"
        android:fontFamily="casual"
        android:textStyle="italic|bold"/>

    <include
        android:id="@+id/layout_signup"
        layout="@layout/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_login_welcome_msg"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:visibility="gone"/>

    <include
        android:id="@+id/layout_login"
        layout="@layout/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:layout_below="@id/tv_login_welcome_msg"
        android:visibility="gone"/>

    <include
        android:id="@+id/layout_area_of_interest"
        layout="@layout/layout_area_of_interest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tv_login_subtitle"
        android:layout_below="@id/tv_login_welcome_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textSize="@dimen/dimen_16_sp"
        android:fontFamily="casual"
        android:textStyle="italic"/>

    <ImageView
        android:id="@+id/iv_welcome_screen_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login_subtitle"
        android:layout_marginTop="@dimen/dimen_30_dp"
        android:layout_centerInParent="true"
        android:src="@drawable/welcome_screen_icon_24dp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_welcome_screen_icon"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:layout_centerInParent="true"
        android:text="@string/login"
        android:fontFamily="casual"/>
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:layout_centerInParent="true"
        android:text="@string/signup"
        android:fontFamily="casual"/>

</RelativeLayout>